# CADMacro

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  engine.rs  injector.rs  lib.rs  main.rs  models.rs  mouse_hook.rs  seed.rs  store.rs
src/components/: CommandPicker.tsx  MacroCard.tsx  NewMacroModal.tsx  TitleBar.tsx  Toaster.tsx  TriggerCapture.tsx  ui.tsx
src/lib/: api.ts  store.ts  types.ts  utils.ts
src/views/: LibraryView.tsx  MacrosView.tsx  SettingsView.tsx
